# galaga_copilot

./: README.md  build_web.sh  galaga_copilot.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
game/: main.py  test_simple.py
